# MathTools

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTE.md  Dockerfile  LICENSE  MANIFEST  Pipfile  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: CI.yaml  CodeQuality.yml  HyneckTutorial.yml  OnPush.yaml  RequirementsAndFormat.yaml  Test.yml  build.yaml  push.yaml  python-publish.yml  pythonapp.yml
mttools/: AlgebraTools.py  CalculusTools.py  Constants.py  Core.py  Exceptions.py  FunctionTools.py  GeometryTools.py  LinearAlgebraTools.py  NumberTools.py  PrimeTools.py  ProfilerTools.py  __init__.py
mttools/AlgebraTools/: __init__.py
mttools/CalculusTools/: CalculusTools.py  __init__.py
mttools/GeometryTools/: __init__.py
mttools/LinearAlgebraTools/: LinearAlgebraTools.py  Matrix.py  Vector.py  __init__.py
mttools/NumberTheoryTools/: Primes.py  __init__.py
mttools/geometry_tools/: PropertiesOfBodies.py  __init__.py
mttools/linear_algebra_tools/: __init__.py  matrix.py  vector.py
mttools/number_theory_tools/: Primes.py  __init__.py
mttools/tests/: test_AlgebraTools.py  test_CalculusTools.py  test_GeometryTools.py  test_LinearAlgebraTools.py  test_NumberTools.py  test_PrimeTools.py  test_ProfilerTools.py
mttools/utils/: Exceptions.py  Profilers.py  Types.py  exceptions.py  profilers.py  types.py
tests/: test_CalculusTools.py  test_GeometryTools.py  test_LinearAlgebraTools.py  test_NumberTools.py  test_PrimeTools.py  test_ProfilerTools.py
tests/test_algebra_tools/: test_AlgebraTools.py
(+10 files in other folders)
