[tool.poetry]
name = "MtTools"
version = "0.1.2"
description = "A Collection of Mathmatical Tools"
authors = ["kgb33 <github@bassingthwaite.org>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest-cov = "^2.8.1"
pytest = "^5.3.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
