[tool.poetry]
name = "mttools"
version = "0.2.2"
description = "A Collection of Mathmatical Tools"
authors = ["kgb33 <github@bassingthwaite.org>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest-cov = "^2.8.1"
pytest = "^5.3.5"
mypy = "^0.761"
tox = "^3.14.6"
pylint = "^2.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
